--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,7 +38,10 @@ ion-img {
     &__flex-center {
         position: absolute;
         top: 50%;
-        transform: translateY(-50%);
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 100%;
     }
 }
 
