--- a/src/global.scss
+++ b/src/global.scss
@@ -15,7 +15,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 * {
-    font-family: 'Rubik', sans-serif !important;
+    font-family: 'Rubik', sans-serif;
     transition: all .3s ease;
     letter-spacing: .3px;
 }
