--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,13 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #fefefe;
-  --ion-color-primary-rgb: 254, 254, 254;
-  --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0, 0, 0;
-  --ion-color-primary-shade: #e0e0e0;
-  --ion-color-primary-tint: #fefefe;
+ 
+  --ion-color-primary: #000000;
+  --ion-color-primary-rgb: 0, 0, 0;
+  --ion-color-primary-contrast: #fefefe;
+  --ion-color-primary-contrast-rgb: 254, 254, 254;
+  --ion-color-primary-shade: #000000;
+  --ion-color-primary-tint: #000000;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
