--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -131,11 +131,11 @@
               <ion-text class="content__text-line--fs-10">לנוחיותכם יש הסעות הלוך וחזור. ההסעות יעברו בין הערים: תל אביב, חולון וראשל״צ.</ion-text>
             </p>
             <p class="ion-text-right" @scaleIn>
-              <ion-text class="content__text-line--fs-8">תל אביב - הלוך - יציאה ב-18:30</ion-text>
+              <ion-text class="content__text-line--fs-8">תל אביב - דרך מנחם בגין 23 (מגדל לוינשטיין) - הלוך - יציאה ב-18:30</ion-text>
               <br>
-              <ion-text class="content__text-line--fs-8">חולון - הלוך - יציאה ב-19:00</ion-text>
+              <ion-text class="content__text-line--fs-8">חולון - קניון חולון (גולדה מאיר 7) - הלוך - יציאה ב-19:00</ion-text>
               <br>
-              <ion-text class="content__text-line--fs-8">ראשל״צ - הלוך - יציאה ב-19:30</ion-text>
+              <ion-text class="content__text-line--fs-8">ראשל״צ - התחנה המרכזית הישנה (הרצל 45) - הלוך - יציאה ב-19:30</ion-text>
               <br>
               <ion-text class="content__text-line--fs-8">חזור - יציאה ב-00:30</ion-text>
             </p>
