--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -128,7 +128,7 @@
         <ion-row class="ion-margin-top" *ngIf="isComing.value !== 'N' && !!transportation.value">
           <ion-col>
             <p class="ion-text-right" @scaleIn>
-              <ion-text class="content__text-line--fs-10">לנוחיותכם יש הסעות הלוך וחזור. ההסעות יעברו בין הערים: תל אביב, חולון וראשל״צ.</ion-text>
+              <ion-text class="content__text-line--fs-10">לנוחיותכם יש הסעה הלוך וחזור. ההסעה תעבור בין הערים: תל אביב, חולון וראשל״צ.</ion-text>
             </p>
             <p class="ion-text-right" @scaleIn>
               <ion-text class="content__text-line--fs-8">תל אביב - דרך מנחם בגין 23 (מגדל לוינשטיין) - הלוך - יציאה ב-18:30</ion-text>
