--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -131,13 +131,13 @@
               <ion-text class="content__text-line--fs-10">לנוחיותכם יש הסעה הלוך וחזור. ההסעה תעבור בין הערים: תל אביב, חולון וראשל״צ.</ion-text>
             </p>
             <p class="ion-text-right" @scaleIn>
-              <ion-text class="content__text-line--fs-8">תל אביב - דרך מנחם בגין 23 (מגדל לוינשטיין) - הלוך - יציאה ב-18:30</ion-text>
+              <ion-text class="content__text-line--fs-8"><strong>תל אביב</strong> - מגדל לוינשטיין - הלוך - יציאה ב-18:30</ion-text>
               <br>
-              <ion-text class="content__text-line--fs-8">חולון - קניון חולון (גולדה מאיר 7) - הלוך - יציאה ב-19:00</ion-text>
+              <ion-text class="content__text-line--fs-8"><strong>חולון</strong> - קניון חולון - הלוך - יציאה ב-19:00</ion-text>
               <br>
-              <ion-text class="content__text-line--fs-8">ראשל״צ - התחנה המרכזית הישנה (הרצל 45) - הלוך - יציאה ב-19:30</ion-text>
+              <ion-text class="content__text-line--fs-8"><strong>ראשל״צ</strong> - בית ספר יגאל אלון - הלוך - יציאה ב-19:30</ion-text>
               <br>
-              <ion-text class="content__text-line--fs-8">חזור - יציאה ב-00:30</ion-text>
+              <ion-text class="content__text-line--fs-8">חזור - יציאה משוערת ב-01:00</ion-text>
             </p>
           </ion-col>
         </ion-row>
